--- a/src/pages/Home/components/componentsStyles/mouseBlob.css
+++ b/src/pages/Home/components/componentsStyles/mouseBlob.css
@@ -6,6 +6,7 @@
     top: 0;
     left: 0;
     border: 2px solid var(--color-nav);
+    mix-blend-mode: multiply;
     border-radius: 50%;
     pointer-events: none;
     z-index: 200;
